<resources>
    <string name="app_name">CaculatorApp</string>
    <string name="title">Casio</string>
    <string name="Clear">C</string>
    <string name="plusminus">+/-</string>
    <string name="percent">%</string>

    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>

    <string name="button_dot">.</string>
    <string name="button_sub">-</string>
    <string name="button_add">+</string>
    <string name="button_mul">*</string>
    <string name="button_div">/</string>
    <string name="button_equals">=</string>
</resources>
